# tokeo

./: .gitignore  CHANGELOG.md  DOCUMENTATION.md  Dockerfile  LICENSE.md  MANIFEST.in  Makefile  PRINCIPLES.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
cedra/: config.py  main.py
cedra/controllers/: base.py  dramatiq.py  emit.py  grpc.py  publish.py  serve.py
cedra/core/: exc.py  hooks.py  version.py
config/: cedra.yaml  tokeo.development.yaml  tokeo.example.yaml  tokeo.production.local.example.yaml  tokeo.production.yaml  tokeo.testing.yaml  tokeo.yaml
config/tokeo/: base.yaml  development.yaml  production.local.yaml  production.yaml  testing.yaml
proto/: cedra.proto  cedra_pb2.py  cedra_pb2_grpc.py  tokeo.proto  tokeo_pb2.py  tokeo_pb2.pyi  tokeo_pb2_grpc.py
tests/: __init__.py  conftest.py  test_cedra.py  test_fairy.py  test_grpc.py  test_init.py  utils.py
tests/app/: tests_tokeo_app.py
tests/ext/: test_ext_automate.py  test_ext_diskcache.py  test_ext_smtp.py
tokeo/: __init__.md  __init__.py  config.py  main.py
tokeo/controllers/: __init__.py  base.py  dramatiq.py  emit.py  grpc.py  grpccall.py
tokeo/core/: __init__.md  __init__.py  exc.py  hooks.py  version.py
tokeo/ext/: __init__.md  __init__.py  ai.py  appenv.py  appshare.py  argparse.py  automate.py  diskcache.py  dramatiq.py  grpc.py  jinja2.py  nicegui.py  pdoc.py  pocketbase.py  print.py  scheduler.py  smtp.py  smtpd.py  vault.py  (+1 more)
tokeo/templates/generate/project/: .generate.yml  .gitignore  CHANGELOG.md  Dockerfile  LICENSE.md  MANIFEST.in  Makefile  README.md  TODO.md  pyproject.toml
tokeo/templates/generate/project/.docker/: .launchrc
tokeo/templates/generate/project/config/: {{app_label}}.development.local.yaml  {{app_label}}.development.yaml  {{app_label}}.production.local.example.yaml  {{app_label}}.production.local.yaml  {{app_label}}.production.yaml  {{app_label}}.testing.local.yaml  {{app_label}}.testing.yaml  {{app_label}}.yaml
tokeo/templates/generate/project/config/{{app_label}}/: base.yaml  development.yaml  production.yaml  testing.yaml
tokeo/templates/generate/project/config/{{app_label}}/base.d/: ai.yaml  automate.yaml  diskcache.yaml  dramatiq.yaml  grpc.yaml  log.yaml  nicegui.yaml  pdoc.yaml  pocketbase.yaml  scheduler.yaml  smtp.yaml  smtpd.yaml  template.yaml  vault.yaml
tokeo/templates/generate/project/config/{{app_label}}/development.d/: grpc.yaml  nicegui.yaml  pdoc.yaml  scheduler.yaml
tokeo/templates/generate/project/config/{{app_label}}/production.de/: smtp.yaml
tokeo/templates/generate/project/config/{{app_label}}/testing.d/: ai.yaml  log.yaml
tokeo/templates/generate/project/tests/: __init__.py  conftest.py  test_init.py  utils.py
tokeo/templates/generate/project/tests/app/: test_{{app_label}}_app.py
tokeo/templates/generate/project/tests/core/ai/: test_wasm.py
tokeo/templates/generate/project/tests/core/akili/: test_akili.py
tokeo/templates/generate/project/tests/core/fundi/: test_fundi.py
tokeo/templates/generate/project/tests/core/grpc/: test_grpc.py
tokeo/templates/generate/project/tests/ext/: test_ai.py  test_ai_fundi.py
tokeo/templates/generate/project/tests/ext/ai/: test_ai.py
tokeo/templates/generate/project/{{app_label}}/: __init__.py  main.py
tokeo/templates/generate/project/{{app_label}}/.docker/: .screenrc
tokeo/templates/generate/project/{{app_label}}/app/fundi/: FUNDI-LLM.md  __init__.py  data.py  dsl.py  infer.py  train.py
tokeo/templates/generate/project/{{app_label}}/controllers/: __init__.py  base.py  emit.py  grpccall.py
tokeo/templates/generate/project/{{app_label}}/core/: __init__.py  exc.py  version.py
tokeo/templates/generate/project/{{app_label}}/core/ai/: __init__.py  akili.py  fundi.py
tokeo/templates/generate/project/{{app_label}}/core/ai/guards/: __init__.py  truncate.py
tokeo/templates/generate/project/{{app_label}}/core/ai/providers/: __init__.py  akili.py
tokeo/templates/generate/project/{{app_label}}/core/ai/tools/: __init__.py  add_days.py  add_months.py  add_years.py  append_file.py  calc.py  calc42.py  current.py  date_daydiff.py  date_diff.py  moon_phase.py  read_file.py  week_number.py  weekday.py
tokeo/templates/generate/project/{{app_label}}/core/ai/transformers/: __init__.py  truncate.py
tokeo/templates/generate/project/{{app_label}}/core/akili/: AKILI-LEX.yaml  AKILI-LLM.md  AKILI-USE.md  __init__.py  data.py  dsl.py  infer.py  tokenizer.py  train.py
tokeo/templates/generate/project/{{app_label}}/core/fundi/: FUNDI-LEX.yaml  FUNDI-LLM.md  __init__.py  data.py  dsl.py  infer.py  tokenizer.py  train.py
tokeo/templates/generate/project/{{app_label}}/core/grpc/: __init__.py  {{app_label}}_interceptor.py  {{app_label}}_servicer.py
tokeo/templates/generate/project/{{app_label}}/core/grpc/proto/: {{app_label}}.proto
tokeo/templates/generate/project/{{app_label}}/core/logic/: __init__.py  exc.py
tokeo/templates/generate/project/{{app_label}}/core/pages/: __init__.py  api.py  index.py  layout.py
tokeo/templates/generate/project/{{app_label}}/core/smtpd/: events_handler.py
tokeo/templates/generate/project/{{app_label}}/core/tasks/: __init__.py  actors.py  agents.py  automate.py  operators.py  performers.py  steps.py
tokeo/templates/generate/project/{{app_label}}/core/utils/: __init__.py
tokeo/templates/generate/project/{{app_label}}/ext/: __init__.py
tokeo/templates/generate/project/{{app_label}}/plugins/: __init__.py
tokeo/templates/generate/project/{{app_label}}/site/: __init__.py  apis.py  openapi.py  routes.py
tokeo/templates/generate/project/{{app_label}}/site/apis/: __init__.py  example.py
tokeo/templates/generate/project/{{app_label}}/site/components/: __init__.py  blocks.py  layout.py
tokeo/templates/generate/project/{{app_label}}/site/pages/: __init__.py  default.py  hello_world.py  index.py
tokeo/templates/generate/project/{{app_label}}/site/ui/: blocks.py
tokeo/templates/generate/project/{{app_label}}/templates/: __init__.py
tokeo/templates/generate/project/{{app_label}}/templates/pdoc/html/: config.mako
(+143 files in other folders)
