[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokeo"
dynamic = ["version"]  # Declare version as dynamic
description = "Tokeo - An event-driven CLI framework with superpower for Python backends."
readme = "README.md"
authors = [
    {name = "Tom Freudenberg", email = "th.freudenberg@gmail.com"}
]
license = "MIT"
urls = {"Homepage" = "https://github.com/tokeo/tokeo"}
requires-python = ">=3.10"
dependencies = [
    "cement==3.0.14",
    "cement[jinja2]",
    "jinja2",
    "cement[yaml]",
    "PyYAML",
    "cement[colorlog]",
    "colorlog",
    "pdoc3",
    "lazy_loader",
]

dev = [
    "pip-tools>=7.0.0",
    "pytest>=8.5.0",
    "pytest-cov>=6.0.0",
    "coverage>=7.10.0",
    "twine>=6.0.0",
    "setuptools>=75.0.0",
    "wheel>=0.40.0",
    "pyink>=25.0.0",
    "flake8>=7.0.0",
    # packages necessary to run all macros
    "prompt_toolkit",
    "diskcache",
    "dramatiq",
    "dramatiq[rabbitmq]",
    "pika",
    "grpcio",
    "grpcio-tools",
    "protobuf",
    "apscheduler>=3.0,<4.0",
    "requests",
    "nicegui>=3.12.1",
    "fastapi",
    "starlette",
    "pydantic[email]",
    "pocketbase>=0.15.0",
    "invoke>=2.2.1",
    "paramiko>=2.7,<4",
    "cryptography>=45.0.0",
]

[project.scripts]
tokeo = "tokeo.main:main"

[tool.setuptools]
packages = {find = {namespaces = true, include = ["tokeo", "tokeo.*"], exclude = ["ez_setup", "tests*"]}}
include-package-data = true

[tool.setuptools.package-data]
"tokeo" = ["**/*.md", "templates/*", "templates/**/*", "templates/**/.*", "**/*.proto"]

[tool.setuptools.dynamic]
version = {attr = "tokeo.core.version.get_version"}
