[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ app_label }}"
dynamic = ["version"]  # Declare version as dynamic
description = "{{ app_description }}"
readme = "README.md"
authors = [
    {name = "{{ creator_name }}", email = "{{ creator_email }}"}
]
{% if project_license == "Proprietary" %}# {% endif %}license = "{{ project_license }}"
urls = {"Homepage" = "{{ project_url }}"}
requires-python = ">=3.10"  # Adjust based on your needs
dependencies = [
    "tokeo==1.3.0",
{% if feature_ai == "Y" %}
    "tokeo[fundi]==1.3.0",
{% endif %}
    "cement==3.0.14",
    "cement[jinja2]",
    "jinja2",
    "cement[yaml]",
    "PyYAML",
    "cement[colorlog]",
    "colorlog",
    "lazy_loader",
{% if feature_apscheduler == "Y" or feature_automate == "Y" %}
    "prompt_toolkit",
{% endif -%}
{% if feature_diskcache == "Y" or feature_dramatiq == "Y" or feature_apscheduler == "Y" %}
    "diskcache",
{% endif -%}
{% if feature_dramatiq == "Y" %}
    "dramatiq",
    "dramatiq[rabbitmq]",
    "pika",
{% endif -%}
{% if feature_grpc == "Y" %}
    "grpcio",
    "grpcio-tools",
    "protobuf",
{% endif -%}
{% if feature_apscheduler == "Y" %}
    "apscheduler>=3.0,<4.0",
{% endif -%}
{% if feature_dramatiq == "Y" or feature_grpc == "Y" or feature_apscheduler == "Y" %}
    "requests",
{% endif -%}
{% if feature_nicegui == "Y" %}
    "nicegui>=3.12.1",
    "fastapi",
    "starlette",
    "email-validator",
    "pscript",
    "vbuild",
{% endif -%}
{% if feature_pocketbase == "Y" %}
    "pocketbase>=0.15.0",
{% endif -%}
{% if feature_automate == "Y" %}
    "invoke>=2.2.1",
    "paramiko>=2.7,<4",
{% endif -%}
{% if feature_ai == "Y" %}
    "httpx",
{% endif -%}
{% if feature_ai == "Y" and feature_ai_akili == "Y" %}
    "numpy",
    "numba",
    "torch",
{% endif -%}
{% if feature_ai == "Y" and feature_ai_wasm == "Y" %}
    "wasmtime",
{% endif -%}
{% if feature_smtpd == "Y" and feature_smtpd_auto_certificates == "Y" %}
    "cryptography>=45.0.0",
{% endif -%}
]

[project.optional-dependencies]
dev = [
    "pip-tools>=7.0.0",
    "pytest>=8.5.0",
    "pytest-cov>=6.0.0",
    "coverage>=7.10.0",
    "twine>=6.0.0",
    "setuptools>=75.0.0",
    "wheel>=0.40.0",
    "pyink>=25.0.0",
    "flake8>=7.0.0",
    "pdoc3>=0.11.0",
{% if feature_dramatiq == "Y" or  feature_nicegui == "Y" %}
    "watchdog",
{% endif -%}
{% if feature_dramatiq == "Y" %}
    "dramatiq[watch]",
    "watchdog_gevent",
    "gevent",
{% endif -%}
]

[project.scripts]
{{ app_label }} = "{{ app_label }}.main:main"

[tool.setuptools]
packages = {find = {include = ["{{ app_label }}", "{{ app_label }}.*"], exclude = ["ez_setup", "tests*"]}}
include-package-data = true

[tool.setuptools.package-data]
"{{ app_label }}" = ["**/*.md", "templates/*", "templates/**/*", "templates/**/.*", "**/*.proto"]

[tool.setuptools.dynamic]
version = {attr = "{{ app_label }}.core.version.get_version"}
